# custom-model-ncnn-android-yolov5lite

./: README.md  local.properties
app/: build.gradle
app/src/main/jni/: CMakeLists.txt
app/src/main/res/layout/: main.xml
